// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CvComponents /> <CvSkill /> Rendering component Rendering with locale EN 1`] = `
<div
  className="sc-bwzfXH uTxCW"
>
  <div
    className="MuiGrid-container-1 MuiGrid-align-items-xs-baseline-12"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-4-75 MuiGrid-grid-xl-4-89"
    >
      <div
        className="sc-htpNat KtFsv"
      >
        <h6
          className="MuiTypography-root-98 MuiTypography-subtitle1-116 MuiTypography-alignCenter-121"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-cog fa-w-16 "
            data-icon="cog"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <span>
             
          </span>
          <span>
            Development
          </span>
        </h6>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-8-79 MuiGrid-grid-xl-8-93"
    >
      <div
        className="sc-bxivhb bUZGRr"
      >
        <div
          className="MuiGrid-container-1 MuiGrid-direction-xs-column-4"
        >
          <div
            className="MuiGrid-item-2"
          >
            <p
              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
            >
              <span>
                Java 8 SE, ReactJS, ES6, C/C++.
              </span>
            </p>
          </div>
          <div
            className="MuiGrid-item-2"
          >
            <p
              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
            >
              <span>
                Python & Lisp/Scheme basic knowledges.
              </span>
            </p>
          </div>
          <div
            className="MuiGrid-item-2"
          >
            <p
              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
            >
              <span>
                Mobile development bases: Android & iOS (Swift).
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CvComponents /> <CvSkill /> Rendering component Rendering with locale FR 1`] = `
<div
  className="sc-bwzfXH uTxCW"
>
  <div
    className="MuiGrid-container-1 MuiGrid-align-items-xs-baseline-12"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-4-75 MuiGrid-grid-xl-4-89"
    >
      <div
        className="sc-htpNat KtFsv"
      >
        <h6
          className="MuiTypography-root-98 MuiTypography-subtitle1-116 MuiTypography-alignCenter-121"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-cog fa-w-16 "
            data-icon="cog"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <span>
             
          </span>
          <span>
            Programmation
          </span>
        </h6>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-8-79 MuiGrid-grid-xl-8-93"
    >
      <div
        className="sc-bxivhb bUZGRr"
      >
        <div
          className="MuiGrid-container-1 MuiGrid-direction-xs-column-4"
        >
          <div
            className="MuiGrid-item-2"
          >
            <p
              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
            >
              <span>
                Java 8 SE, ReactJS, ES6, C/C++.
              </span>
            </p>
          </div>
          <div
            className="MuiGrid-item-2"
          >
            <p
              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
            >
              <span>
                Bases de Python & de Lisp/Scheme.
              </span>
            </p>
          </div>
          <div
            className="MuiGrid-item-2"
          >
            <p
              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
            >
              <span>
                Notions d'Android & bases de Swift (iOS).
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
